<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CPBL賽程表</string>
    <!-- ActionBar strings -->
    <string name="action_settings">設定</string>
    <string name="action_refresh">更新</string>
    <string name="action_more">更多</string>
    <string name="action_leader_board">戰績</string>
    <string name="action_cache_mode">離線模式</string>
    <string name="action_leave_cache_mode">離開離線模式</string>
    <string name="title_fast_rewind">上個月</string>
    <string name="title_fast_forward">下個月</string>

    <!-- general string -->
    <string name="title_game_field">比賽球場</string>
    <string name="title_game_kind">比賽類別</string>
    <string name="title_game_year">年份</string>
    <string name="title_game_month">月份</string>
    <string name="title_query">查詢</string>
    <string name="tab_title_upcoming">即將到來</string>
    <string name="tab_title_previous">歷史賽事</string>
    <string name="title_cpbl_year">職棒 %d 年</string>
    <string name="no_games_this_month">沒有相關的比賽資料</string>
    <string name="query_error">查詢出現問題</string>
    <string name="no_favorite_teams">沒有球隊比賽可顯示</string>
    <string name="no_available_network">沒有網路連線</string>
    <string name="title_game_year_all_months">所有月份</string>

    <!-- preference -->
    <!-- GeneralFragment -->
    <string name="title_general_settings">一般設定</string>
    <string name="app_version">版本</string>
    <string name="app_build_info">版本資訊</string>
    <string name="app_change_log">更新紀錄</string>
    <string name="title_data_source">資料來源</string>
    <string name="title_copyright">版權</string>
    <string name="title_about_app">關於程式</string>
    <string name="title_open_source">Open source</string>

    <!-- DisplayFragment -->
    <string name="title_display_settings">顯示設定</string>
    <string name="title_select_upcoming">即將到來的比賽</string>
    <string name="title_select_upcoming_on">直接跳至即將到來的比賽</string>
    <string name="title_select_upcoming_off">直接顯示所有比賽</string>
    <string name="title_show_team_logo">隊徽</string>
    <string name="title_show_team_logo_on">在對戰組合中顯示隊伍隊徽</string>
    <string name="title_show_team_logo_off">在對戰組合顯示中不顯示隊伍隊徽</string>
    <string name="title_highlight_win">標記獲勝隊伍</string>
    <string name="title_highlight_win_on">將獲勝隊伍以粗體及顏色標註</string>
    <string name="title_highlight_win_off">不標註獲勝隊伍</string>
    <string name="title_display_favorite">顯示最愛</string>
    <string name="title_favorite_teams">最愛球隊</string>
    <string name="title_favorite_teams_all">所有球隊</string>
    <string name="title_highlight_today">標示今日賽程</string>
    <string name="title_highlight_today_on">以不同底色標記出今天的比賽</string>
    <string name="title_highlight_today_off">不特別標記今天的比賽</string>
    <string name="title_include_lead_board">戰績表</string>
    <string name="title_include_lead_board_on">將戰績表顯示於主畫面中</string>
    <string name="title_include_lead_board_off">將戰績表顯示於對話框中</string>
    <string name="title_include_lead_board_no_support">僅支援對話框模式</string>
    <string name="title_orientation">自動旋轉螢幕</string>
    <!-- Showcase -->
    <string name="phone_activity_showcase_title">歡迎使用</string>
    <string name="phone_activity_showcase_detail">點擊這裡可以叫出切換賽程的查詢窗格，亦可使用手勢從螢幕左側滑入。\n
        \n請按右上角的設定來修改顯示設定。</string>
    <string name="tablet_activity_showcase_title">歡迎使用 CPBL 賽程表</string>
    <string name="tablet_activity_showcase_detail">\n點擊查詢按鈕即可進行查詢。\n
        \n如果要更改顯示設定，請按右上角的設定進入設定頁面。</string>
    <!-- NotificationFragment -->
    <string name="title_notification_settings">通知設定</string>
    <string name="title_enable_notification_on">啟用通知</string>
    <string name="title_enable_notification_off">停用通知</string>
    <string name="title_notify_teams">接收通知的球隊</string>
    <string name="title_notify_alarm">接收通知的時間</string>
    <string name="title_notify_ringtone">通知音效</string>
    <string name="title_manual_game_notify">手動選擇比賽</string>
    <string name="title_manual_game_notify_on">點擊鬧鐘圖示可加入通知排程</string>
    <string name="title_manual_game_notify_off">只接收球隊的通知</string>
    <string name="title_notify_pending_action">點擊通知時的動作</string>
    <string name="title_show_dialog">除通知外，以對話框提醒</string>
    <string name="title_show_dialog_on">時間到時會輔以對話框提醒</string>
    <string name="title_show_dialog_off">時間到時不會跳出對話框</string>
    <string name="title_enable_song">自動播放中華職棒主題曲</string>
    <string name="title_enable_song_on">顯示對話框時，一並播放中華職棒主題曲</string>
    <string name="title_enable_song_off">顯示對話框時，不播放中華職棒主題曲</string>
    <string name="title_test_song">試聽音樂</string>
    <string name="title_test_song_no_support">音樂檔格式不正確或檔案有問題</string>
    <string name="title_test_song_fail">音樂似乎有問題，請稍後再試！</string>
    <string name="title_vibrate">震動通知</string>
    <string name="title_vibrate_on">時間到時會輔以震動提醒</string>
    <string name="title_vibrate_off">時間到時不以震動提醒</string>
    <!-- AdvancedFragment -->
    <string name="title_advanced_settings">進階設定</string>
    <string name="title_clear_cache">清除快取</string>
    <string name="summary_clear_cache">清除暫存在本機端的資料</string>
    <string name="summary_clear_cache_off">開啟離線模式的時候，不支援此功能</string>
    <string name="summary_clear_cache_null">沒有暫存在本機端的資料</string>
    <string name="title_clear_cache_complete">清除完畢!</string>
    <string name="title_restart_app">重新啟動程式</string>

    <!-- Notificaitons -->
    <string name="title_notification">比賽要開打囉!</string>
    <string name="msg_content_text">%1$s 對 %2$s</string>
    <string name="msg_content_text2"> &amp; %1$s 對 %2$s</string>
    <string name="msg_big_text_content">%1$s 對 %2$s ＠%3$s\n在%4$s直播</string>
    <string name="msg_big_text_content_no_broadcast">%1$s 對 %2$s %3$s</string>
    <string name="action_open_app">開啟程式</string>
    <string name="title_in_silent_mode">靜音模式</string>
    <!-- ListView Empty view -->
    <string name="action_go_to_website">前往中華職棒網站</string>
    <!-- live message -->
    <string name="title_live_on_cpbltv">Live! CPBL TV</string>
    <string name="title_live_now">Live!</string>
    <!-- download message -->
    <string name="title_download">載入中</string>
    <string name="title_download_delay_games">更新補賽資料中</string>
    <string name="title_download_from_cpbl">自 CPBL 官網下載中 %1$04d/%2$02d</string>
    <string name="title_download_from_zxc22">自 zxc22.idv.tw 下載中 %1$04d/%2$02d</string>
    <string name="title_download_from_cache">快取 %1$04d/%2$02d 載入中</string>
    <string name="title_download_complete">資料下載完成，解析中</string>
    <string name="title_parse_complete">資料解析完成</string>
    <string name="title_download_song">下載 %s</string>
    <string name="title_notify_song_list">對話框出現時播放的音樂</string>
    <!-- cache mode tutorial -->
    <string name="title_cache_mode_enable_message">離線模式將不會自動更新賽程資料。如果要取得新的賽程，請點擊刷新。\n
        \n第一次下載，必須花一點時間下載完整賽程表。</string>
    <string name="title_cache_mode_start">啟用</string>
    <!-- leader board -->
    <string name="title_team">球隊</string>
    <string name="title_win">勝</string>
    <string name="title_lose">敗</string>
    <string name="title_tie">和</string>
    <string name="title_win_rate">勝率</string>
    <string name="title_game_behind">場差</string>

    <!-- Permissions -->
    <string name="title_ask_permission">需要儲存權限</string>
    <string name="message_ask_permission">建議您授予寫入至外部儲存空間權限，以免暫存的快取占用寶貴的內部儲存空間</string>
    <string name="ok_ask_permission">我知道了</string>
    <string name="cancel_ask_permission">不了，謝謝</string>

</resources>
