<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/abs__background_holo_light"
              tools:context=".SplashActivity"
              android:orientation="vertical"
              android:padding="@dimen/padding_medium">


    <ScrollView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_game_field"
                    android:id="@+id/textView1"
                    android:layout_gravity="left|center_vertical"
                    android:padding="@dimen/padding_small"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner1"
                    android:layout_gravity="center"
                    android:entries="@array/cpbl_game_field_name"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_game_kind"
                    android:id="@+id/textView2"
                    android:layout_gravity="left|center_vertical"
                    android:padding="@dimen/padding_small"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner2"
                    android:layout_gravity="left|center_vertical"
                    android:entries="@array/cpbl_game_kind_name"/>
            </LinearLayout>

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_game_year"
                android:id="@+id/textView3"
                android:layout_gravity="left|center_vertical"
                android:padding="@dimen/padding_small"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3"
                android:layout_gravity="left|center_vertical"/>

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_game_month"
                android:id="@+id/textView4"
                android:layout_gravity="left|center_vertical"
                android:padding="@dimen/padding_small"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner4"
                android:layout_gravity="left|center_vertical"/>
        </LinearLayout>
    </ScrollView>

    <!--<View
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"></View>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_query"
        android:id="@android:id/button1"
        android:layout_gravity="center"
        android:padding="@dimen/padding_large"/>

</LinearLayout>